--- a/app/src/main/res/layout/content_question_display.xml
+++ b/app/src/main/res/layout/content_question_display.xml
@@ -74,6 +74,7 @@
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
+        android:checked="false"
         android:layout_alignParentBottom="true"
         android:background="?attr/colorControlActivated" >
 
