--- a/app/src/main/res/layout/competition_detail.xml
+++ b/app/src/main/res/layout/competition_detail.xml
@@ -8,14 +8,16 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="Competition Detail for Competition" />
+        android:gravity="center"
+        android:layout_gravity="center"
+        android:text="Competition Details" />
 
 
-    <TextView
+    <!--TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceMedium"
-        android:text="Competition Details :"/>
+        android:text="Competition Details :"/-->
 
     <!--The Competition Name -->
 
